--- a/README
+++ b/README
@@ -2,113 +2,242 @@
   nabu: A Text File Publishing System
 =======================================
 
-.. contents::
-..
-
    "Nabu is the Babylonian god of wisdom and writing, worshipped by
    Babylonians as the son of Marduk and his consort, Sarpanitum, and as
    the grandson of Ea."
 
    ---(From `Wikipedia <http://en.wikipedia.org/wiki/Nabu>`_)
 
+.. contents::
+
+
 Description
 ===========
 
-Nabu is a system for allowing users to easily create large amounts of
-relevant information and publish this information in a semantically
-meaningful way on a remote server, which can then be accessed by various
-services with the intent to build useful services on top of this
-semantically rich storage.
+Nabu is a simple framework that extracts chunks of various types of information
+from documents written in simple text files (written with reStructuredText_
+conventions) and that stores this information (including the document) in a
+remote database for later retrieval.  The processing and extraction of the
+document is handled on a server, and there is a small and simple client that is
+used to push the files to the server for processing and storage (think
+``rsync``).  The client requires only Python to work.  The presentation layer
+is left unspecified: you can use whichever web application framework to present
+the extracted data in the way that you prefer.
 
-Concretely, Nabu allows you to keep various types of information into
-simple text files (in `restructuredtext
-<http://docutils.sourceforge.net>`_ format, with simple added
-directives), and to have these informations parsed, organized and
-available remotely, and to have a web server display the information in
-various ways.  For example, you can have files with text, links, contact
-info, etc. in them and this information gets extracted and becomes
-available for a blog system to use.
+Assuming that a user can easily create text documents --this is the case for
+most programmers and techies, we do this all day, and we all have our favourite
+text editors-- this system allows you to store various kinds of data *across*
+multiple documents.  You can create and maintain a body of text files from which
+various elements automatically get stored in an organized manner in a database.
+
+It is probably best illustrated by some examples...
+
+
+Example: Extracting Contact Info
+--------------------------------
+
+For example, imagine that you write several files about your travels, say, one
+for each destination.  Most likely they contain various contact information.
+You could insert them like this in any of your text files and they would
+automatically be extracted to a global list of contact info::
+
+  :Contact:
+  :n: Martin Blais
+  :e: blais@furius.ca
+  :a: 1 rue de la Montagne, Mongueuil, France
+
+You could use this to feed into an online address book system, or create a
+birthday notification system for yourself by adding your birth date.
+
+
+Example: Blogging System
+------------------------
+
+Another example: you could easily build a blogging system by detecting documents
+with certain bibliographic fields and a date at the top of document, for
+example::
+
+   Cookies and Cream Today
+   =======================
+
+   :Blog: general
+   :Date: 2005-06-25
+
+   Ahh, I like to talk about cookies and cream...
+
+
+All you would have to do is present the documents in an orderly way, e.g. by
+category, by date, just the most recent, whatever you like.
+
+
+Example: Automatic Bookmarks List
+---------------------------------
+
+Another idea: you could automatically extract all the URLs from the documents
+pushed to the server (across *all* the files) and automatically build an online
+RSS bookmarks feeder, where your bookmarks would be organized by keywords, maybe
+even fetching the keywords in the respective documents from which they were
+extracted.
+
+
+Example: Shared Events Calendar
+-------------------------------
+
+How about this one: I maintain a todo file in a text file, simply.  With a
+simple convention, like::
+
+  :Event: 2005-06-28
+    - dinner with Hannah @ funky restaurant
+
+  :Event: 2005-07-10 13h30
+    - presentation on quaternions (room C-117)
+
+These entries could be fed automatically in a shared Nabu, for a group of
+friends or perhaps co-workers, and presented as a shared online calendar,
+perhaps password-protected for access by certain people only, or filtered
+somehow.
+
+
+There are many possibilities... I'm convinced I will find more serious uses for
+this system as well, which is why I built it in a generic manner.
+
+
+Customizeability: Writing Extractors
+------------------------------------
+
+Various simple extractors will come with the Nabu package itself, but we suspect
+you will very soon want to write your own.  Writing extractors is very easy.
+
+All of this is built using the very powerful docutils_ tools, which includes the
+reStructuredText_ parser and provides the data structures that represent your
+source documents.  Extractors are simply docutils transforms that visit the
+document structure (which is provided and saved by the Nabu system).  To add a
+new type of entry, all you need to do is write code that visits the tree, finds
+what you want, and write a simple object to store it in the way you prefer.  You
+can use SQLObject or another library to store the data in a database or in text
+files.
+
+
+Target Audience
+---------------
+
+This system is made to be a simple as possible to use.  However, it is not
+designed for your mother.  In order to be able to use this efficiently, you must
+
+1. understand the conventions and simple no-markup syntax of reStructuredText_;
+2. be able to edit simple text files.
+
+I suspect that this will cather to people who are already familiar with
+computers.
+
 
 For more details, see the design document and project proposal under the
 ``doc`` subdirectory.
 
 
-
+Features
+========
 
 Nabu is cool, because:
 
-- you edit files locally, with your favourite editor.  
+- it is flexible: you can use
 
-- the organization of the files in subdirectories has nothing to do with how the
-  content is presented.  It effectively offers you a sandbox for creating
-  content, and then how you organize or present the content is dictated by ways
-  that *you* decide, potentially independent of the file organization structure;
+  * whichever text editor you like to edit the files;
+  * whichever source code control system you like to store and maintain them (or
+    none);
+  * whichever database for storage;
+  * and whichever web application framework for presentation.  Nabu does not
+    dictate how the information is presented/served to the clients;
 
-- the valuable source of the information, the text files, remains with you, and
-  you are free to manage them in any way you prefer, with any version control
-  system you like (if you want to do that);
+- you edit files *locally*, not in a bleeping web browser window (programmers
+  will appreciate the value of this);
 
-- it does not dictate how the information is presented/served to the clients;
+- the organization of the source files in subdirectories has *nothing* to do
+  with how the content is presented.  We use a unique id system (similar to
+  arch) where your document to be published must contain a unique string to mark
+  it with that id.  You can put that string in a reStructuredText_ comment or a
+  bibliographic field.  Unlike Wikis, this allows you to change the title of
+  your documents which keeping the possibility of a permanent link to them.
 
-- various semantic things are automatically extracted from your document.  These
-  semantic things are easily written with little code and are configurable.
-  Nabu comes with many content extractors (generic and specific ones);
+  It effectively offers you a sandbox for creating content, and then how you
+  organize and present the content is dictated by ways that *you* decide, most
+  likely independent of the source file organization structure;
 
-- a light-weight program with little dependencies is used to upload the files on
-  the server.  The server parses the content.  This maximizes the potential that
-  you will be able to use Nabu anywhere;
+- the input data is scattered over many files, it does not have to be stored
+  per-category (for example, you don't have to store all your "contacts" in a
+  single "address book" file.  I conjecture that this may be closer to how
+  humans think of this data.  This body of files can be used to create a
+  mind-mapping system;
+
+- we recognize that the value of the information lies in the source itself, the
+  text files.  This valuable source remains *with you*, and you are free to
+  manage them in any way you prefer, with any version control system you like
+  (if you want to do that).  You can completely dump the data that lies on the
+  database and rebuild it from the text files;
+
+- various semantic chunks of content are automatically extracted from your
+  document.  These semantic things are easily written with little code and are
+  configurable.  Nabu comes with example content extractors;
+
+- a light-weight program with minimal dependencies is used to upload the files
+  on the server.  The server processes the files for content.  This maximizes
+  the potential that you will be able to use Nabu anywhere, on any platform.
+  The client only requires Python to work;
 
 
+Nabu is not
+-----------
 
-Nabu is not:
+- a Wiki: although we upload documents (like Wiki pages) to a server, it may be
+  that the presentation layer never serves the pages/documents themselves.
+  Maybe it just serves bits of information extracted from the files.  Also,
+  documents are identified by a unique string, and not by Wiki names.  This
+  allows one to use whatever title for single documents and to create permanent
+  links to specific documents (as long as the file id is maintained);
 
-- a Wiki
+- a Blogging system: it can be used to add any document set to a database.
+  Organization by date and category is simply implemented, but not a
+  requirement.  You present the data set (which can be anything) in your
+  preferred manner;
 
-- a Blogging system
+- a Word Processing system: it is not meant to just serve documents.  You write
+  your documents locally, but they have the limitations of reStructuredText_.
+  You must use a simple text editor.
 
-- a word processing system
+- a Data Entry format: if you have *lots* of similarly structured bits of
+  human-editable data, it would probably be better to write custom code to parse
+  a known format rather than leverage Nabu for this.  The docutils_ processing
+  on the server is not extremely fast, and if you need speed for lots of data
+  (say, thousands of files), you will probably find this too slow.  However, for
+  smaller sets of files that do not change too often, Nabu could be used this
+  way.
 
-
-
-Nabu is:  a way to add content and extract semantic from this content-- no
-presentation layer.  You can build the presentation with any web development
-framework that can access an SQL database.
-
+Nabu sits between all these things.  I do not know what to call it, so I just
+call it "Nabu".
 
 
 Documentation
 =============
 
-- `Usage <doc/nabu-usage.html>`_: for content creators;
+- `Usage <doc/nabu-usage.html>`_: usage instructions for content pushers;
 
-- `Goals <doc/nabu-goals.html>`_: motivation behind this project;
+- `Goals <doc/nabu-goals.html>`_: motivation behind this project, history of
+  what led me to implement this;
 
-- `Ideas <doc/nabu-ideas.html>`_: unorganized file with random ideas (this is my
-  work file);
+- `Design <doc/nabu-design.html>`_: conceptual design and software architecture;
 
-- `Design <doc/nabu-design.html>`_: design concepts.
+- `Future <doc/nabu-ideas.html>`_: future, postponed or rejected ideas. Stuff
+  that I would like to do that is not on the immediate list;
 
-Components
-----------
+- `TODO list <TODO>`_: list of future changes, broken things, etc.;
 
-Nabu Client
-   Contains a publisher that reads files on the local client filesystem and that
-   figures out which ones are meant for publication, connects to the Nabu Server
-   and asks for comparison of the files and incrementally uploads the files that
-   have changed to update the content on the server.
-   The client code may also contain a easy-to-use editor for source files.
+- `Change Log <CHANGES>`_: recent changes, history;
 
-Nabu Server
-   Receives updates of the source files from the publisher client, figures out
-   which files have changed since the last update by serving MD5 sums of the
-   files it has processed, and makes the necessary updates.  The content is
-   stored in a database after having been parsed.
 
-Presenter / Web Application
-   Uses the content stored on the database by the server, and provides a web
-   front to the data by providing various services, like a blog, an addressbook,
-   etc.  It also provides a web application with users, and various levels of
-   access to the various chunks of data.
+Test Drive Nabu
+---------------
+
+- `Test Drive`_: test drive Nabu on our server;
 
 
 Download
@@ -117,58 +246,82 @@ Download
 You can download the `Nabu Publisher Client`__ and save it under the name
 ``nabu``.  Usage instructions can be found `here <doc/nabu-usage.html>`_.
 
-The server code is not available for now, we only want to release this when it
-will be sexy enough.
-
 __ /nabu/bin/nabu
 
-
-Beta Testing
-------------
-
-1. `Create a new user in our testing Nabu server
-   </nabu/test/cgi-bin/nabu-newuser.cgi>`_;
-
-2. Use the created user/password to configure your client, for the publisher at
-   http://furius.ca/nabu/cgi-bin/nabu-publish-handler.cgi  ;
-   
-3. `View the contents of the database (with the created user and password)
-   </nabu/cgi-bin/nabu-contents.cgi>`_.
+The entire codebase is available from our Subversion server only, until we
+release a 1.0 version.  It consists mostly in server code, but it also contains
+the publisher client.
 
 
 Reporting Bugs
 ==============
 
-Send email to <blais@furius.ca>.
+Send email to the author: Martin Blais <blais@furius.ca>.
 
 
-Installation
-============
+Installation and Dependencies
+=============================
 
-- *client*: you need Python-2.3 (and perhaps some kind of shell environment
-  (cmd.exe can do on Windows));
+Nabu Publisher Client
+  A single file written in Python. 
 
-- *server*: you need apache and mod_python, Python-2.4 and the PostgreSQL
-  database server;
+  The publisher finds files on the local client filesystem and figures out which
+  ones are meant for publication by detecting the ids within the top of the
+  files, connects to the Nabu Server and asks for comparison of the files and
+  incrementally uploads the files that have changed to update the content on the
+  server.  The client code may also contain a easy-to-use editor for source
+  files.
 
-- *app*: you need some web application framework of your choice.  We provide an
-  example with a CGI script to debug the contents extracted to the database.
+  Requires Python-2.3 or greater (and perhaps some kind of shell environment to
+  invoke the Python script with some arguments (cmd.exe that comes with Windows
+  can do the job)).  That's it.
+
+
+Nabu Server / Publisher Handler
+  Receives updates of the source files from the publisher client, helps the
+  client figure out which files have changed since the last update by serving
+  MD5 sums of the files it has processed, and makes the necessary updates.  The
+  content is stored in a database after having been parsed.
+
+  We provide generic handler code for the publisher server, which you can bind
+  to a CGI script with XML-RPC (very simple) or within your own server system
+  (if you can write a little bit of Python code, still very simple).  On the
+  server, you must have:
+
+  - `Python-2.4 <http://python.org>`_ or greater;
+  - docutils_;
+  - if you use a database backend: `SQLObject <http://sqlobject.org>`_ and a
+    supported wrapper for your database;
+
+  Otherwise, all you have to do with copy the example publisher that comes with
+  Nabu, change it to configure the transforms that you would like be processed
+  on your server.
+
+
+Presentation Layer
+  This is up to you.  Nabu does not provide nor dictate the way in which you
+  present your content, it only deals with the upload and processing of the
+  source documents and the storage of extracted information.
+
+  However, we provide a simple CGI script that allows you to browse the uploaded
+  contents for debugging and visualizing what has been stored in the Nabu
+  database.
 
 
 Copyright and License
 =====================
 
-.. important::
+Copyright (C) 2005  Martin Blais.  
+This code is distributed under the `GNU General Public License <COPYING>`_.
 
-   Copyright (C) 2005  Martin Blais.  All Rights Reserved.
-   
-   This code is NOT distributed publicly for now.  It is very much copyrighted
-   and definitive action will be taken if you steal it in any way.  Those are
-   the rules for now.  Use by permission only.
-   
 
 Author
 ======
 
 Martin Blais <blais@furius.ca>
+
+
+.. _docutils: http://docutils.sourceforge.net
+.. _reStructuredText: http://docutils.sourceforge.net/rst.html
+.. _Test Drive: doc/nabu-beta.html
 
