--- a/README
+++ b/README
@@ -263,6 +263,10 @@ Snapshots of the latest Nabu source code can be found in the `Download Area
 the publisher client.  When I get some feedback I will decide on the version
 number.
 
+.. important:: You will need a recent snapshot of the docutils svn development
+   	       tree (after stamp 3624) to be able to install and run a server.
+   	       This does not affect clients.
+
 Stability is a relative matter.  Personally, I consider these snapshots to
 correspond to a beta stability for a 1.0 release.  When I get some feedback I
 will select version number (probably 1.0).
