--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-=======================================
-  nabu: A Text File Publishing System
-=======================================
+======================================================
+  nabu: a Data Publishing System Based on Text Files
+======================================================
 
    "Nabu is the Babylonian god of wisdom and writing, worshipped by
    Babylonians as the son of Marduk and his consort, Sarpanitum, and as
