--- a/README
+++ b/README
@@ -334,6 +334,22 @@ Copyright (C) 2005  Martin Blais.
 This code is distributed under the `GNU General Public License <COPYING>`_.
 
 
+Acknowledgements
+================
+
+This project uses two important libraries to do its thing:
+
+- the `docutils <http://docutils.sourceforge.net>`_ project, which provides an
+  RST parser, the internal document structure, and the HTML writer (and more).
+  Docutils is a major facilitator for this system--without it this idea probably
+  would not have see the light of daya;
+
+- the `SQLObject <http://sqlobject.org>`_ library, which provides easier access
+  to SQL storage.
+
+It is also built in the Python language.
+
+
 Author
 ======
 
