--- a/README
+++ b/README
@@ -192,29 +192,38 @@ Nabu is cool, because:
 Nabu is not ...
 ---------------
 
-- a Wiki: although we upload documents (like Wiki pages) to a server, it may be
-  that the presentation layer never serves the pages/documents themselves.
+- not a Wiki: although we upload documents (like Wiki pages) to a server, it may
+  be that the presentation layer never serves the pages/documents themselves.
   Maybe it just serves bits of information extracted from the files.  Also,
   documents are identified by a unique string, and not by Wiki names.  This
   allows one to use whatever title for single documents and to create permanent
   links to specific documents (as long as the file ID is maintained);
 
-- a Blogging system: it can be used to add any document set to a database.
+- not a Blogging system: it can be used to add any document set to a database.
   Organization by date and category is simply implemented, but not a
   requirement.  You present the data set (which can be anything) in your
   preferred manner;
 
-- a Word Processing system: it is not meant to just serve documents.  You write
-  your documents locally, but they have the limitations of reStructuredText_.
-  You must use a simple text editor.
+- not a Word Processing system: it is not meant to just serve documents.  You
+  can use it to publish just the information that is found within documents,
+  used to contain that information.
 
-- a Data Entry format: if you have *lots* of similarly structured bits of
-  human-editable data, it would probably be better to write custom code to parse
-  a known format rather than leverage Nabu for this.  The docutils_ processing
-  on the server is not extremely fast, and if you need speed for lots of data
-  (say, thousands of files), you will probably find this too slow.  However, for
-  smaller sets of files that do not change too often, Nabu could be used this
-  way.
+  Also, you write your documents locally, but they have the limitations of
+  reStructuredText_, so it is not really like a Word processing system.  You
+  must use a simple text editor.
+
+- not a generic data entry format: although you could potentially use it to
+  enter larges lists of similarly structured data, the overhead of document
+  processing does not make it the most efficient way to do this.  If you have
+  *lots* of similarly structured bits of human-editable data, it would probably
+  be better to write custom code to parse a known format rather than leverage
+  Nabu for this.  The docutils_ processing on the server is not extremely fast,
+  and if you need speed for lots of data (say, thousands of files), you will
+  probably find this too slow.  
+
+  However, for smaller sets of files, Nabu could be used this way.  Or if you
+  have to input various kinds of structures within different contexts which can
+  be grouped in files.
 
 Nabu sits between all these things.  I do not know what to call it, so I just
 call it "Nabu".
