--- a/README
+++ b/README
@@ -192,19 +192,25 @@ Nabu is cool, because:
 Nabu is not ...
 ---------------
 
-- not a Wiki: although we upload documents (like Wiki pages) to a server, it may
+A Wiki
+  Although we upload documents (like Wiki pages) to a server, it may
   be that the presentation layer never serves the pages/documents themselves.
   Maybe it just serves bits of information extracted from the files.  Also,
   documents are identified by a unique string, and not by Wiki names.  This
   allows one to use whatever title for single documents and to create permanent
   links to specific documents (as long as the file ID is maintained);
 
-- not a Blogging system: it can be used to add any document set to a database.
+A Blogging system
+  It can be used to add any document set to a database.
   Organization by date and category is simply implemented, but not a
   requirement.  You present the data set (which can be anything) in your
-  preferred manner;
+  preferred manner.
 
-- not a Word Processing system: it is not meant to just serve documents.  You
+  You could, however, very easily implement a flexible and very complete
+  blogging system using Nabu.
+
+Word Processing system
+  It is not meant to just serve documents.  You
   can use it to publish just the information that is found within documents,
   used to contain that information.
 
@@ -212,7 +218,8 @@ Nabu is not ...
   reStructuredText_, so it is not really like a Word processing system.  You
   must use a simple text editor.
 
-- not a generic data entry format: although you could potentially use it to
+A generic data entry format
+  Although you could potentially use it to
   enter larges lists of similarly structured data, the overhead of document
   processing does not make it the most efficient way to do this.  If you have
   *lots* of similarly structured bits of human-editable data, it would probably
